# web-scraper

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
config/: settings.yaml
src/web_scraper/: __init__.py  _logging.py  cli.py  config.py  images.py  magento.py  models.py  pipeline.py  sheets.py  utils.py  watermark.py
src/web_scraper/sources/: __init__.py  base.py  browser_fallback.py  gsmarena.py  official_media.py
tests/: test_config.py  test_gsmarena.py  test_images.py  test_magento.py  test_official_media.py  test_sheets.py
tests/fixtures/: gsmarena_gallery.html  gsmarena_product.html  gsmarena_search.html
