[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "web-scraper"
version = "0.1.0"
description = "Configurable image scraping and Magento upload pipeline."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "beautifulsoup4>=4.12.3",
  "httpx>=0.27.2",
  "imagehash>=4.3.1",
  "numpy>=1.26,<2",
  "openpyxl>=3.1.5",
  "opencv-python-headless>=4.10.0.84,<4.12",
  "pillow>=10.4.0",
  "playwright>=1.53.0",
  "pytesseract>=0.3.10",
  "pyyaml>=6.0.2"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2"
]

[project.scripts]
web-scraper = "web_scraper.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/web_scraper"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
